fix: more consistent whitespace around toolbar

--- a/app/components/Toolbar.module.css
+++ b/app/components/Toolbar.module.css
@@ -1,8 +1,8 @@
 .container {
-  padding: 24px 16px;
+  padding: 16px;
   display: flex;
   flex-direction: row-reverse;
-  margin-top: -104px;
+  margin-top: -88px;
   align-items: end;
 }
 
